# rholang-rs

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.wasm  Makefile  Numeric Types.md  README.md  rspace.md
docs/: BYTECODE.md  (+13 more)
rholang-bytecode/: Cargo.toml
rholang-bytecode/examples/: core_types_example.rs  instruction_example.rs
rholang-bytecode/src/: instruction.rs  lib.rs  name.rs  types.rs  value.rs
rholang-bytecode/src/constants/: mod.rs  pool.rs
rholang-bytecode/src/core/: constants.rs  instructions.rs  mod.rs  module.rs  opcodes.rs  types.rs
rholang-bytecode/src/error/: mod.rs
rholang-bytecode/src/errors/: errors.rs
rholang-bytecode/src/types/: address.rs  mod.rs  name.rs  value.rs
rholang-bytecode/tests/: core_types_test.rs  instruction_test.rs  memory_benchmarks.rs  test_types.rs
rholang-compiler/: Cargo.toml
rholang-compiler/src/: codegen.rs  codegen_agent.rs  disassembler.rs  driver.rs  error.rs  lib.rs  reporter.rs
rholang-compiler/tests/: channels.rs  collections.rs  compiler_error_gate.rs  control_flow.rs  driver_integration.rs  expressions.rs  generate_examples.rs  literals.rs  numeric_types.rs  real_compilation_errors.rs  reporter_tests.rs  variables.rs
rholang-compiler/tests/common/: mod.rs
rholang-interpreter/: Cargo.toml
rholang-interpreter/src/: lib.rs
rholang-lib/: Cargo.toml
rholang-lib/benches/: bank_contract.rho  coat_check.rho  kv_store.rho  ping_pong.rho  sem_anal.rs  treasury.rho
rholang-lib/src/sem/: db.rs  interner.rs  mod.rs  pipeline.rs
rholang-parser/: Cargo.toml  README.md
rholang-parser/src/: ast.rs  lib.rs  parser_wasm.rs  traverse.rs
rholang-parser/src/parser/: ast_builder.rs  errors.rs  mod.rs  parsing.rs  string_lit.rs  string_literal.rs
rholang-parser/tests/: desugar_equivalence.rs  numeric_types_tests.rs  simple.rs  string_lit_integration_tests.rs  string_literal.rs  string_literal_unit.rs  where_clauses_tests.rs
rholang-parser/tests/corpus/: 1.know_ones_revaddress.rho  agent.rho  agent_keywords_as_identifiers.rho  agent_minimal.rho  agent_minimal_desugared.rho  agent_missing_constructor.rho  agent_missing_default.rho  agent_private_method_no_private_default.rho  agent_private_state.rho  agent_private_state_desugared.rho  agent_with_methods.rho  agent_with_methods_desugared.rho  agent_with_private.rho  agent_with_private_desugared.rho  bank_contract.rho  bank_contract_btr.rho  collections.rho  for_multi.rho  numeric_types.rho  send_method_bundle_arg.rho  send_method_comparison_args.rho  send_method_for_source.rho  send_method_keyword_name_rejected.rho  send_method_neq_no_regression.rho  send_method_nested_send_arg.rho  send_method_nested_send_method_arg.rho  send_method_sequential.rho  send_method_terminator.rho  send_method_zero_args.rho  send_plain_no_regression.rho  treasury.rho  treasury_btr.rho  var_ref.rho  vectordb_similarity.rho
rholang-process/: Cargo.toml
rholang-process/src/: execute.rs  lib.rs  parameter.rs  process.rs  value.rs  vm.rs
rholang-process/tests/: parameter_tests.rs
rholang-rspace/: Cargo.toml
rholang-rspace/src/: entry.rs  error.rs  in_memory.rs  lib.rs  path_map.rs  rspace.rs  value.rs
rholang-rspace/tests/: rspace_rules_tests.rs
rholang-shell/: Cargo.toml
rholang-shell/examples/: process_examples.rs
rholang-shell/src/: lib.rs  main.rs  providers.rs  runtime_eval.rs
rholang-shell/tests/: args_tests.rs  compiler_provider_tests.rs  disassemble_tests.rs  example_test.rs  fake_interpreter_tests.rs  golden_shell.rs  help_message_tests.rs  interpreter_tests.rs  lib_test.rs  lib_tests.rs  load_corpus_tests.rs  main_function_tests.rs  main_integration_tests.rs  main_test.rs  main_tests.rs  multiline_tests.rs  process_examples_test.rs  providers_error_tests.rs  providers_test.rs  rholang_parser_interpreter_tests.rs  scriptable_shell_tests.rs
rholang-shell/tests/examples/: complex_example.rho  examples.rho  (+1 more)
rholang-tree-sitter/: Cargo.toml  grammar.js
rholang-tree-sitter/src/: grammar.json  node-types.json  parser.c  parser_without_comments.c
rholang-vm/: Cargo.toml  README.md  SUMMARY.md  vm_state_schema.json
rholang-vm-old/: Cargo.toml
rholang-vm-old/benches/: end_to_end.rs  execution.rs
rholang-vm-old/examples/: greeter_contract.rs
rholang-vm-old/src/: bytecode.rs  interpreter.rs  state.rs  vm.rs
rholang-vm-old/tests/: bytecode_basic_tests.rs  bytecode_contract_tests.rs  bytecode_rspace_operations_tests.rs  test_utils.rs  vm_pause_resume_tests.rs  vm_state_tests.rs
rholang-vm/benches/: compilation.rs
rholang-vm/examples/: contract_atomic.rs  greeter_contract.rs  shell_integration.rs  simple_arithmetic.rs
rholang-vm/src/: bytecode.rs  compiler.rs  error.rs  execute.rs  interpreter.rs  lib.rs  opcode_exec.rs  process.rs  process_space.rs  rspace.rs  state.rs  value.rs  vm.rs
rholang-vm/tests/: arithmetic_tests.rs  bytecode_basic_tests.rs  bytecode_contract_tests.rs  bytecode_examples_tests.rs  bytecode_rspace_operations_tests.rs  collection_diff_tests.rs  collections_tests.rs  comparison_tests.rs  control_flow_tests.rs  corpus_tests.rs  examples_vm_tests.rs  minimal_vm_tests.rs  numeric_types_tests.rs  parallel_exec_tests.rs  parallel_mvp_tests.rs  rspace_operations_tests.rs  test_utils.rs  vm_parallel_process_space.rs  vm_pause_resume_tests.rs  vm_state_tests.rs
rholang-wasm/: Cargo.toml  index.html
rholang-wasm-draft/: Cargo.toml  Dockerfile
rholang-wasm-draft/src/: lib.rs
rholang-wasm-draft/tests/: wasm_interface_tests.rs
rholang-wasm-draft/www/: index.html
rholang-wasm/src/: lib.rs
rholang-wasm/tests/: build_script_tests.rs  disassemble_tests.rs  eval_tests.rs  native_tests.rs  serve_script_tests.rs  wasm_tests.rs
rholang-wasm/web/: index.html
rholang-wasm/www/: index.html  package-lock.json  package.json  vite.config.ts
shell/: Cargo.toml
shell/src/: interpreter.rs  json_commands.rs  lib.rs  main.rs  main_sync.rs  providers.rs  rholang_types.rs
shell/tests/: interpreter_tests.rs  main_tests.rs  multiline_tests.rs  shell_integration_tests.rs
(+304 files in other folders)
