[workspace]
members = [
    "rholang-bytecode",
    "rholang-lib",
    "rholang-parser",
    "rholang-shell",
    "rholang-interpreter",
    "rholang-tree-sitter",
    "rholang-tree-sitter-proc-macro",
    "rholang-vm",
    "rholang-compiler",
    "test-macros",
    "rholang-wasm",
]
resolver = "3"

[workspace.dependencies]
ahash = "0.8.12"
anyhow = "1.0.98"
as-any = "0.3.2"
async-trait = "0.1.89"
bitvec = "1.0.1"
bracket-parser = "0.1.0"
divan = "0.1.21"
i256 = "0.2.3"
indexmap = "2.12.1"
intmap = "3.1.2"
is-terminal = "0.4.12"
jni = "0.21.1"
parking_lot = { version = "0.12.5" }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "test-util", "parking_lot", "sync", "macros"] }
rustyline-async = "0.4.6"
rustyline = "*"
serde_json = "1.0.107"
tree-sitter = "0.25.10"
tree-sitter-language = "0.1.5"
validated = "1.0.0"

clap = { version = "4.5.40", features = ["derive"] }

async-std = { version = "1.13.1", features = ["attributes"] }

# Used by: rholang-shell, rholang-parser
rstest = "0.26.1"

# Library for benchmarking
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
# Used by: rholang-tree-sitter-proc-macro
quote = "1.0.42"
syn = "2.0.111"

# Used by: rholang-parser, librho
smallvec = { version = "1.15.1", features = ["union", "const_generics", "const_new", "may_dangle"] }

# Used by: rholang-tree-sitter-proc-macro
serde = { version = "1.0.188", features = ["derive"] }

[workspace.dependencies.async-scoped]
version = "0.9.0"
features = ["use-tokio"]

[profile.bench]
debug = "line-tables-only"

[profile.dev]
debug = 2
