[package]
name = "rholang-bytecode"
version = "0.1.0"
edition = "2021"
description = "Bytecode representation and utilities for Rholang"

[lib]
name = "rholang_bytecode"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serde_json = "1.0"

[[example]]
name = "core_types_example"
path = "examples/core_types_example.rs"

[[example]]
name = "instruction_example"
path = "examples/instruction_example.rs"
