[package]
name = "rholang-bytecode"
description = "Rholang Bytecode"
version = "0.1.0"
edition = "2024"

[lib]
name = "rholang_bytecode"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies for zero-copy operations
memmap2 = "0.9"
rkyv = { version = "0.8.11", features = ["bytecheck"] }
bytecheck = "0.8.1"
ahash = "0.8"  # Fast hashing for interning TODO! can be replaced, not good choise
parking_lot = "0.12"  # Better RwLock implementation
arc-swap = "1.6"  # Atomic Arc operations

# Error handling
thiserror = "2.0.16"
anyhow = "1.0"

# Bit manipulation and encoding
bitflags = "2.4"
byteorder = "1.5"

# Memory management
typed-arena = "2.0"
bumpalo = { version = "3.14", features = ["collections"] }

# Tracing and metrics
tracing = "0.1"
metrics = "0.24"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.4"
quickcheck = "1.0"
pretty_assertions = "1.4"
test-case = "3.1"
