[package]
name = "rholang-parser"
description = "Parser for the Rholang language based on the tree-sitter grammar."
version = "0.1.0"
edition = "2024"

[lib]
name = "rholang_parser"
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Controls whether comments appear as named nodes in the tree-sitter syntax tree.
# Note: This feature is primarily for documentation. To toggle comment visibility:
#   1. Set RHOLANG_NAMED_COMMENTS=1 (for named) or =0 (for unnamed)
#   2. Run: cd rholang-tree-sitter && npx tree-sitter generate
#   3. Rebuild the project
# Named comments enable LSP features (hover, folding) but add ~10-15% parsing overhead.
# The Rust parser always filters comments when building the AST regardless of this setting.
named-comments = []

[[bench]]
name = "parsing"
harness = false

[dependencies]
bitvec = { workspace = true }
nonempty-collections = "1.0.0"
rholang-tree-sitter = { path = "../rholang-tree-sitter" }
rholang-tree-sitter-proc-macro = { path = "../rholang-tree-sitter-proc-macro/" }
smallvec = { workspace = true }
tree-sitter = { workspace = true }
typed-arena = "2.0.2"
validated = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
insta = "1.43.1"
pretty_assertions = { workspace = true }
rstest = { workspace = true }
