[package]
name = "rholang-shell"
version = "0.1.2"
edition = "2021"

# Add lib configuration to expose crate modules to tests
[lib]
name = "rholang_shell"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "rhosh"
path = "src/main.rs"

[[bin]]
name = "core_rholang_examples"
path = "src/bin/core_rholang_examples.rs"

[features]
with-file-history = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
rustyline-async = { workspace = true }
clap = { workspace = true }
bracket-parser = { workspace = true }
rholang-parser = { path = "../rholang-parser" }
rholang-lib = { path = "../rholang-lib" }
rholang-compiler = { path = "../rholang-compiler" }
rholang-vm = { path = "../rholang-vm" }
validated = { workspace = true }
atty = "0.2"


[[example]]
name = "process_examples"
path = "examples/process_examples.rs"

[dev-dependencies]
rstest = { workspace = true }
async-std = { workspace = true }
insta = "1.43.1"
