[package]
name = "rholang-vm-old"
version = "0.1.0"
edition = "2021"
description = "Virtual Machine for executing Rholang bytecode (legacy)"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
rholang-parser = { path = "../rholang-parser" }
rholang-bytecode = { path = "../rholang-bytecode" }
serde = { workspace = true }
serde_json = { workspace = true }
validated = { workspace = true }
uuid = { version = "1.7.0", features = ["v4"] }
jsonschema = "0.17"

[dev-dependencies]
rstest = { workspace = true }
async-std = { workspace = true }
divan = { workspace = true }
once_cell = "1.19.0"

[[bench]]
name = "compilation"
harness = false

[[bench]]
name = "execution"
harness = false

[[bench]]
name = "end_to_end"
harness = false

[[example]]
name = "simple_arithmetic"
path = "examples/simple_arithmetic.rs"

[[example]]
name = "contract_atomic"
path = "examples/contract_atomic.rs"

[[example]]
name = "greeter_contract"
path = "examples/greeter_contract.rs"