[package]
name = "rholang-vm"
version = "0.2.0"
edition = "2021"
description = "New Rholang VM (from scratch) based on rholang-bytecode"

[dependencies]
anyhow = { workspace = true }
rholang-bytecode = { path = "../rholang-bytecode" }

[lib]
name = "rholang_vm"
path = "src/lib.rs"

[dev-dependencies]
rholang-compiler = { path = "../rholang-compiler" }
rholang-parser = { path = "../rholang-parser" }
rholang-lib = { path = "../rholang-lib" }
tokio = { workspace = true }
validated = { workspace = true }