[package]
name = "rholang-wasm"
version = "0.1.0"
authors = ["Rholang Team"]
edition = "2021"
license = "Apache-2.0"
description = "WASM interface for Rholang interpreter"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
# FFI and browser console access
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
# Better panic messages in the browser
console_error_panic_hook = "0.1"
# JSON interop and serialization for API results
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
# Ensure WebAssembly randomness backend available for transitive deps
getrandom = { version = "0.3", features = ["wasm_js"] }

# VM dependency is now mandatory; wasm interface always evaluates via VM.
rholang-vm = { path = "../rholang-vm" }
# rholang-parser will be added when wiring real parsing; kept commented for now.
# rholang-parser = { path = "../rholang-parser" }

[features]
# Placeholder feature used by build scripts; currently no conditional code.
vm-eval = []

[dev-dependencies]
wasm-bindgen-test = "0.3"
pretty_assertions = { workspace = true }

[profile.release]
# Smaller and faster-for-size WASM binary
lto = "fat"
opt-level = "z"
panic = "abort"